syntax = "proto3";

package mainflux;

service ThingsService {
    rpc CanAccess(AccessReq) returns (Identity) {}
    rpc Identify(Token) returns (Identity) {}
}

service UsersService {
    rpc Identify(Token) returns (Identity) {}
}

message AccessReq {
    string token = 1;
    string chanID = 2;
}

message Token {
    string value = 1;
}

message Identity {
    string value = 1;
}
